@@ -215,13 +215,9 @@ typedef struct {
 	binaryfunc nb_and;
 	binaryfunc nb_xor;
 	binaryfunc nb_or;
-	int nb_reserved; /* unused, used to be nb_coerce */
 	unaryfunc nb_int;
 	unaryfunc nb_long;
 	unaryfunc nb_float;
-	/* NB: nb_oct and nb_hex are not used anymore. */
-	unaryfunc nb_oct;
-	unaryfunc nb_hex;
 
 	binaryfunc nb_inplace_add;
 	binaryfunc nb_inplace_subtract;
