@@ -108,12 +108,9 @@ static PyNumberMethods bool_as_number = {
 	bool_and,		/* nb_and */
 	bool_xor,		/* nb_xor */
 	bool_or,		/* nb_or */
-	0,			/* nb_reserved */
 	0,			/* nb_int */
 	0,			/* nb_long */
 	0,			/* nb_float */
-	0,			/* nb_oct */
-	0,		 	/* nb_hex */
 	0,			/* nb_inplace_add */
 	0,			/* nb_inplace_subtract */
 	0,			/* nb_inplace_multiply */
